# mc_server_ctrl

./: README.md  docker-compose.yml  example.env
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
