[package]
name = "msc-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3.1.6"
poem-openapi = { version = "5.1.5", features = ["swagger-ui"] }
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
